<resources>
    <string name="app_name">NXPLAY.R</string>
    <string name="signup">Sign up</string>
    <string name="login">Login</string>
    <string name="connect_yourself_to_catch_nopportunities_amp_achieve_your_goals">
        <![CDATA[Connect yourself to catch \nopportunities & achieve your goals]]></string>
    <string name="lets_get_started">Let\'s Get Started</string>
    <string name="sign_up_with_linkedin">Sign up with LinkedIn</string>
    <string name="sign_up_with_facebook">Sign up with Facebook</string>
    <string name="sign_up_with_instagram">Sign up with Instagram</string>
    <string name="create_your_account">Create your account</string>
    <string name="by_creating_or_logging_into_an_account_you_re_agreeing_with_our_terms_amp_conditions">
        <![CDATA[By Creating or logging into an account, you\'re \nagreeing with our Terms & Conditions.]]></string>
    <string name="less_business_more_social">Less Business, More Social.</string>
    <string name="dream_big_show_talent">Dream Big. Show your Talent.</string>
    <string name="intro_screen2_subtitle">
        <![CDATA[Be great at what you do, and show it \nto the world. Post CVs, share videos, \nphotos & lifestyle]]></string>
    <string name="intro_title_3">Build your Future, Success.</string>
    <string name="intro_screen3_subtitle">Find and Engage the right, best \nTalents to reinforce your Portfolio, \nClub,
        Team, Academy
    </string>
    <string name="intro_title_4">Explore. Select. Chat.</string>
    <string name="intro_screen4_subtitle"><![CDATA[Send & receive Instant, \nPrivate Messages]]></string>
    <string name="intro_title_5">Categorize your Connections.</string>
    <string name="intro_screen5_subtitle">Rank your contacts as per \nyour priorities</string>
    <string name="intro_title_6">Control your Privacy easily.</string>
    <string name="intro_screen6_subtitle">
        <![CDATA[Post & communicate while managing \nyour privacy, by tailoring your \naudience]]></string>
    <string name="intro_title_7">Buy. Wear. Play. Win.</string>
    <string name="intro_screen7_subtitle">Enjoy an e-Boutique to purchase your \nfavourite team\'s equipment, Perhaps \nyour
        Next One
    </string>
    <string name="intro_title_8">Vote for Players. The Best.</string>
    <string name="intro_screen8_subtitle"><![CDATA[NxPlay.R Is home to \ncelebrities, current & future talents. \nVote for the Best Rising Stars]]></string>
    <string name="intro_title_9">Reward for the Best 12th \nPlayer. Fans.</string>
    <string name="intro_screen9_subtitle">Vote for the Best Fans based on their \nTifos, Anthems, Influence</string>
    <string name="intro_title_10">Call for Duty. Willing \nto Donate</string>
    <string name="intro_screen10_subtitle">For every subscription, we reverse a % to \nhelp children in need in poor countries</string>
    <string name="no_data_found">No Record Found.</string>
    <string name="loading">Loading</string>
    <string name="error_common_network">It seems there is no internet connection.</string>
    <string name="error_crash_error_message">Oops! It seems something went wrong.Please try again.</string>
    <string name="retry">retry</string>
    <string name="likes">Likes</string>
    <string name="connections">Connections</string>
    <string name="connections_selected">Connections Selected</string>
    <string name="select_all">Select All</string>
    <string name="search">Search</string>
    <string name="send">Send</string>
    <string name="why_are_you_reposting_this">Why are you reposting this?</string>
    <string name="submit">Submit</string>
    <string name="share">Share</string>
    <string name="sms">SMS</string>
    <string name="mail">Mail</string>
    <string name="notification_remove_dialog"><![CDATA[Are you sure want to remove this notification?]]></string>
    <string name="experience_remove_dialog"><![CDATA[Are you sure want to delete Experience?]]></string>
    <string name="education_remove_dialog"><![CDATA[Are you sure want to delete Education?]]></string>
    <string name="language_remove_dialog"><![CDATA[Are you sure want to delete Language?]]></string>
    <string name="sign_in">Sign in</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="email_mobile">Email/Mobile</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_passwordis">Forgot Password</string>
    <string name="new_user">New User</string>
    <string name="enter_your_registered_email_address_or_mobile_number_to_reset_your_password">Enter Your registered email address or \n mobile number to reset your password</string>
    <string name="continueis">Continue</string>
    <string name="profile_registered">Profile Registered!</string>
    <string name="still_few_more_steps_to_go">(Still Few More Steps To Go)</string>
    <string name="next">Next</string>
    <string name="hey_you_re">Hey! you\'re..</string>
    <string name="select_your_gender">Select your gender</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="what_kind_of_user_are_you">What kind of user are you?</string>
    <string name="to_enhance_your_experience_select_which_category_your_profile_fits_into">To enhance your experience,\nselect which category your\nprofile fits into</string>
    <string name="which_football_type_are_you_in">Which football type are you in?</string>
    <string name="select_which_type_of_football_are_you_playing">Select which type of football\n are you playing</string>
    <string name="your_age_group">Your Age Group</string>
    <string name="select_your_age_group">Select your age group</string>
    <string name="let_s_build_your_profile">Let\'s Build Your Profile</string>
    <string name="building_real_connections_between_real_people_please_add_one_photo_of_yourself">Building real connections between real people. Please add one photo of yourself</string>
    <string name="introduce_yourself">Introduce Yourself</string>
    <string name="introduce_your_parents">Parent / Guardian Permission</string>
    <string name="fill_out_the_rest_of_your_details_so_people_know_a_little_more_about_you">Fill out the rest of your details so people know a little more about you</string>
    <string name="first_name">First Name</string>
    <string name="family_name">Family Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="close">Close</string>
    <string name="storage_permission_denied">Permission denied</string>
    <string name="selectImage">Select Image</string>
    <string name="send_code_again"><u>Send Code Again</u></string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="basic_details">Basic Details</string>
    <string name="passport_nationality">Passport Nationality</string>
    <string name="current_country_location_pin">Current Country + Location Pin</string>
    <string name="football_age_category">Football Age Category</string>
    <string name="height_cm_weight_kg"><![CDATA[Height(cm) & Weight(kg)]]></string>
    <string name="height_weight"><![CDATA[Height & Weight]]></string>
    <string name="football_level">Football Level</string>
    <string name="football_league">Football League</string>
    <string name="current_club">Current Club</string>
    <string name="pitch_position_s">Pitch Position(s)</string>
    <string name="current_location">Current Location</string>
    <string name="height_cm">Height(cm)</string>
    <string name="weight_kg">Weight(kg)</string>
    <string name="best_foot_feet">Best Foot/Feet</string>
    <string name="grant_access_contacts">You need to grant access Contacts.</string>
    <string name="start_sync_with_fsl">Start Sync with FSL</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="professionals">Professionals</string>
    <string name="job_title">Job Title</string>
    <string name="description">Description</string>
    <string name="media">Media</string>
    <string name="select_connection_to_request_recommendation">Select connection to request\nrecommendation</string>
    <string name="select_reletionship">Select reletionship</string>
    <string name="select_your_role_and_company">Select your role and company</string>
    <string name="message">Message</string>
    <string name="_2_request_received">2 request received</string>
    <string name="title">Title</string>
    <string name="company_name">Company Name</string>
    <string name="location">Location</string>
    <string name="i_am_currently_working_here">I currently work here</string>
    <string name="add_or_link_to_external_documents_photos_sites_videos_and_presentations">Add or link to external documents, photos, sites,\nvideos and presentations.</string>
    <string name="mm_yyyy">MM/YYYY</string>
    <string name="_7_457_20_followers">7_457_20_followers</string>
    <string name="coach_fifa_club">Coach-FIFA Club</string>
    <string name="set_your_privacy">Set Your Privacy</string>
    <string name="allow_people_to_follow_me">Allow People To Follow Me</string>
    <string name="allow_connect_request">Allow Connect Requests</string>
    <string name="general">General</string>
    <string name="follow_unfollow">Follow/Unfollow</string>
    <string name="follow">Follow</string>
    <string name="following">Following</string>
    <string name="connect_disconnect">Connect/Disconnect</string>
    <string name="like">Like</string>
    <string name="vote">Vote</string>
    <string name="comment">Comment</string>
    <string name="english">English</string>
    <string name="photo_2h">Photo 2h</string>
    <string name="name">Name</string>
    <string name="update">Update</string>
    <string name="save">Save</string>
    <string name="unsave_this_post">Unsave this Post</string>
    <string name="unblock">Unblock</string>
    <string name="alternative_email_address">Alternative Email Address</string>
    <string name="website">Website</string>
    <string name="current_country">Current Country</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_address">Email Address</string>
    <string name="settings">Settings</string>
    <string name="privacy">Privacy</string>
    <string name="my_account">My Account</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="saved_posts">Saved Posts</string>
    <string name="hidden_posts">Hidden Posts</string>
    <string name="change_password">Change Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="invite">Invite</string>
    <string name="current_password">Current Password</string>
    <string name="blocked_users">Blocked Users</string>
    <string name="language">Language</string>
    <string name="notification">Notifications</string>
    <string name="shipping_addresses">Shipping Addresses</string>
    <string name="my_reviews">My Reviews</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="payment_Methods">Payment Methods</string>
    <string name="suggested_feature">Suggested Feature</string>
    <string name="rate_the_app">Rate The App</string>
    <string name="content_language">Content Language</string>
    <string name="send_feedback">Send a Feedback</string>
    <string name="parent_legal">Parent / Legal Guardian Alert</string>
    <string name="as_per_your_selection">As per your selection of the age group, you have to fill Parent / Legal Guardian information at the end of the registration process.</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
</resources>