<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_you_are"
        style="@style/Font.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_7sdp"
        android:gravity="center"
        android:text="@string/hey_you_re"
        android:textSize="@dimen/_25ssp" />

    <TextView
        android:id="@+id/tv_select_gender"
        style="@style/Font.SubTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:gravity="center"
        android:text="@string/select_your_gender" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_select_male"
            android:layout_width="@dimen/_110sdp"
            android:layout_height="@dimen/_110sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:src="@drawable/gender_icon_unselected_male" />

        <TextView
            android:id="@+id/tv_male"
            style="@style/Font.SubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center"
            android:text="@string/Male" />


        <ImageView
            android:id="@+id/img_select_female"
            android:layout_width="@dimen/_110sdp"
            android:layout_height="@dimen/_110sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_30sdp"
            android:src="@drawable/gender_icon_unselected_female" />

        <TextView
            android:id="@+id/tv_female"
            style="@style/Font.SubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center"
            android:text="@string/Female" />
    </androidx.appcompat.widget.LinearLayoutCompat>


    <com.chand.progressbutton.ProgressButton
        android:id="@+id/btnSelectGender"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        app:p_arrowVisible="false"
        app:p_backgroundTint="@android:color/transparent"
        app:p_cornerRadius="@dimen/_3sdp"
        app:p_fontFamily="brandon_reg"
        app:p_progressColor="@color/colorPrimary"
        app:p_strokeColor="@color/grayborder"
        app:p_strokeWidth="@dimen/_1sdp"
        app:p_style="progressBar"
        app:p_text="@string/next"
        app:p_textColor="@color/colorPrimary"
        app:p_textSize="@dimen/_18ssp" />

</androidx.appcompat.widget.LinearLayoutCompat>