<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/round_corner_box_darkshade"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp">

        <TextView
            android:id="@+id/title"
            style="@style/Font.SubTitle_blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/parent_legal"
            android:textAlignment="center"
            android:textSize="@dimen/_15ssp" />

        <TextView
            android:id="@+id/desc"
            style="@style/Font.SubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/as_per_your_selection"
            android:textAlignment="center"
            android:textSize="@dimen/_13ssp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal"
            android:weightSum="2">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rounded_edittext"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/_5sdp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/cancelText"
                    style="@style/Font.SubTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="@dimen/_2sdp"
                    android:text="@string/cancel"
                    android:textAlignment="center"
                    android:textColor="@color/grey" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/ok"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rounded_edittext"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/_5sdp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/okText"
                    style="@style/Font.SubTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="@dimen/_2sdp"
                    android:text="@string/ok"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>